--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,17 +25,14 @@ android {
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-
-  implementation project(":base")
-
+  implementation project(':base')
   implementation Dependencies.DAGGER
-  annotationProcessor  Dependencies.DAGGER_ANNOTATION_PROCESSOR
+  annotationProcessor Dependencies.DAGGER_ANNOTATION_PROCESSOR
   implementation Dependencies.DAGGER_SUPPORT
   annotationProcessor Dependencies.DAGGER_COMPILER
   implementation Dependencies.RECYCER_VIEW
@@ -47,13 +44,15 @@ dependencies {
   implementation Dependencies.DESIGN_SUPPORT
   annotationProcessor Dependencies.GLIDE_COMPILER
   implementation Dependencies.GLIDE
-
   implementation Dependencies.AUTO_VALUE
   annotationProcessor Dependencies.AUTO_VALUE_ANNOTATION
   annotationProcessor Dependencies.AUTO_VALUE_ANNOTATION_PARSEL
   annotationProcessor Dependencies.AUTOVALUE_WITH_COMPILER
   implementation Dependencies.GSON
   annotationProcessor Dependencies.BUTTER_KNIFE_ANNOTATION
-
   annotationProcessor Dependencies.SUPPORT_ANNOTATION
+  implementation Dependencies.ROOM_DATABASE
+  annotationProcessor Dependencies.ROOM_DATABASE_ANOTAION_PROCESSOR
+  implementation Dependencies.ROOM_RX_JAVA
+  testImplementation 'org.mockito:mockito-all:2.0.2-beta'
 }
