--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  testImplementation "android.arch.core:core-testing:1.1.1"
+
   implementation project(':base')
   implementation Dependencies.DAGGER
   annotationProcessor Dependencies.DAGGER_ANNOTATION_PROCESSOR
